# pdf_tin

./: .gitignore  Makefile  setup.py
pdf_tin/: CMakeLists.txt
pdf_tin/src/main/cpp/: CMakeLists.txt
pdf_tin/src/main/cpp/pdf_tin/: BoundingBox.cpp  BoundingBox.hpp  Color.hpp  Document.cpp  Document.hpp  DocumentCreationError.hpp  Image.hpp  NoSuchPageError.cpp  NoSuchPageError.hpp  Page.hpp  PageLayout.hpp  PageMode.cpp  PageMode.hpp  PropertyAccessError.cpp  PropertyAccessError.hpp  Text.hpp  TextStyle.hpp
pdf_tin/src/main/cpp/pdf_tin/detail/: GListPtr.hpp  GObjectPtr.hpp
pdf_tin/src/test/cpp/: CMakeLists.txt
pdf_tin/src/test/cpp/pdf_tin/: BoundingBoxTests.cpp  DocumentTest.cpp  NoSuchPageErrorTests.cpp  PageTests.cpp
src/cpp/: BoundingBox.hpp  Caches.hpp  Color.cpp  Color.hpp  ImmutableLazyList.cpp  ImmutableLazyList.hpp  Page.cpp  Page.hpp  PageIterator.hpp  Pages.cpp  Pages.hpp  PdfDocument.cpp  PdfDocument.hpp  PyBytesPtr.cpp  PyBytesPtr.hpp  PyFloatPtr.hpp  PyIntPtr.hpp  PyObjectPtr.hpp  PyStringPtr.cpp  PyStringPtr.hpp  Text.cpp  Text.hpp  TextStyle.cpp  TextStyle.hpp  TextStyleSegment.cpp  TextStyleSegment.hpp  pypdf_tin.cpp
src/main/cpp/: Makefile
src/main/cpp/pdf_tin/: BoundingBox.hpp  Color.cpp  Color.hpp  Document.cpp  DocumentCreationError.cpp  ImmutableList.hpp  NoSuchPageError.cpp  Page.cpp  Page.hpp  PageLayout.cpp  PageMode.cpp  Text.hpp  TextStyle.cpp  TextStyle.hpp  TextStyleSegment.cpp  TextStyleSegment.hpp
src/main/pyext/: Document.hpp  PdfDocument.cpp  PdfDocument.hpp  PyIntPtr.hpp  PyObjectPtr.hpp  PyStringPtr.cpp  PyStringPtr.hpp
src/test/cpp/: Makefile
src/test/cpp/pdf_tin/: ImmutableListTests.cpp  PageTests.cpp
src/test/resources/: TestDoc1.odt
